# ProjectRoadmapper

./: .roadmapper.toml  BOOTSTRAP.md  LICENSE  PHASE_4_ACTION_PLAN.md  PROJECT_ROADMAP.md  README.md  ROADMAP_CREATOR.md  SESSION_2025_11_04_A.md  SESSION_2025_11_04_B.md  SESSION_2025_11_04_C.md  SESSION_2025_11_04_D.md  SESSION_2025_11_04_E.md  SESSION_2025_11_04_F.md  SESSION_2025_11_04_G.md  SESSION_2025_11_04_H.md  SESSION_2025_11_04_I.md  SESSION_Getting_the_Developer_Up_to_Speed.md  UPDATE.md  launch_dashboard.bat  launch_dashboard.py  launch_dashboard_silent.vbs  pyproject.toml  requirements-dev.txt  requirements.txt
.roadmapper/: history.jsonl
docs/: ADD_PROJECT_TO_DASHBOARD.md  CLEANUP_SUMMARY.md  CLONE_SETUP.md  DASHBOARD_LAUNCHER.md  DOCUMENT_CLEANUP_GUIDE.md  MIGRATION_GUIDE.md  MULTI_COMPUTER_SETUP.md  QUICK_START.md  TROUBLESHOOTING.md  WHAT_IS_CLI.md
docs/archive/sessions/: SESSION_2025_11_04_A.md  SESSION_2025_11_04_B.md  SESSION_2025_11_04_C.md  SESSION_2025_11_04_H.md  SESSION_Getting_the_Developer_Up_to_Speed.md
docs/guidance/: README.md
docs/guidance/workflow_review/: workflow_review_request.md  (+1 more)
docs/reference/: CONTEXT_COMPRESSION.md  FILE_ORGANIZATION_GUIDE.md  REASONING_MARKERS.md  REVIEW_RESPONSE_TEMPLATE.md  REVIEW_TEMPLATE.md  SESSION_WORKING_TEMPLATE.md  STRUCTURED_TASKS.md  config.md
roadmapper/: __init__.py  cli.py  commits.py  config.py  context.py  dashboard.py  docs.py  history.py  init.py  knowledge.py  paths.py  projects.py  search.py  session.py  session_close.py  status.py  summarize.py  templates.py  utils.py
